Fix overflow for URL autocomplete on Windows - removes padding (not required after accepting https://github.com/brave/browser-laptop/pull/4400) - includes hardcoded size of menubar in offset calculation
Fixes https://github.com/brave/browser-laptop/issues/4539

Auditors: @bbondy @luixxiul

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -41,11 +41,6 @@
     box-sizing: border-box;
   }
 
-  .navbarMenubarFlexContainer {
-    padding-left: 5px;
-    padding-top: 5px;
-  }
-
   #urlInput { width: 100%; }
 
   // changes to ensure window can be as small as 480px wide
